# apkprobe

./: README.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
apkprobe/: __init__.py  active.py  analyzer.py  apk.py  attacksurface.py  axml.py  cli.py  components.py  diff.py  manifest.py  normalize.py  passive.py  rules.py  sarif.py  secrets.py  vulnmatch.py
docs/: attack-surface-and-diffing.md
docs/corpus/apkprobe-engineering-compendium-reference/: apkprobe-engineering-compendium-reference.md
examples/: help.txt
polyglot/: README.md
polyglot/c/: apk_container_parser.c
polyglot/cpp/: apk_container_parser.cpp
polyglot/go/: apk_container_parser.go
polyglot/java/: apk_container_parser.java
polyglot/python/: apk_container_parser.py
polyglot/rust/: apk_container_parser.rs
polyglot/typescript/: apk_container_parser.ts
ports/: README.md
ports/go/: go.mod  main.go  rules.go  rules_test.go
ports/kotlin/: Main.kt  Rules.kt  Test.kt  manifest.fixture.json
ports/rust/: Cargo.toml
ports/rust/src/: lib.rs  main.rs
ports/rust/tests/: rules_test.rs
ports/ts/: package.json  tsconfig.json
ports/ts/src/: cli.ts  rules.ts  (+1 more)
tests/: _axml_fixture.py  conftest.py  test_active.py  test_active_passive_flow.py  test_analyzer.py  test_attacksurface.py  test_axml.py  test_cli.py  test_cli_active_passive.py  test_cli_profile_diff.py  test_cli_vulns_feeds.py  test_components.py  test_datafeeds.py  test_diff.py  test_manifest.py  test_normalize.py  test_passive.py  test_rules.py  test_sarif.py  test_secrets.py  test_vulndb_local.py  test_vulnmatch.py
(+16 files in other folders)
